logs/edh-python-utilities.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/edh_python_utilities'...
Listing './lib/python3.5/site-packages/edh_python_utilities/test_scripts'...
Compiling './lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_date_cleanse.py'...
***   File "./lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_date_cleanse.py", line 7
    print "Cleansed date strict with defaults: %s"%(cleanse.cleanse_date(dateToCleanse))
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_experian_date_cleanse.py'...
***   File "./lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_experian_date_cleanse.py", line 7
    print "Cleansed date strict with defaults: %s"%(cleanse.cleanse_experian_date(dateToCleanse))
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_number_cleanse.py'...
***   File "./lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_number_cleanse.py", line 7
    print "Cleansed number: %s"%(cleanse.cleanse_number(numberToCleanse))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_string_cleanse.py'...
***   File "./lib/python3.5/site-packages/edh_python_utilities/test_scripts/test_string_cleanse.py", line 7
    print "Cleansed String: %s"%(cleanse.cleanse_string(stringToCleanse))
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/edh_python_utilities-0.0.18.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
